# SOIL

./: .gitignore  CMakeLists.txt  README.md  build_with_mingw.bat
projects/VC14.0/: SOIL.sln  SOIL.vcxproj
projects/codeblocks/: SOIL.layout
src/: CMakeLists.txt  soil.pc.in  soilConfig.cmake.in
